--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,10 +1,30 @@
 {% extends "index.html" %}
 
 {% block content %}
-    <div class="container">
+    <div class="container"  style="padding-top: 2%">
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
             {% if username %}
-                <h1>Welcome, {{ username }}</h1>
+                <!-- <h1>Welcome, {{ username }}</h1> -->
+                <table class="table table-hover table-striped table-bordered" style="background-color: white;">
+                    <thead class="text-center">
+                        <tr>
+                            <th>#</th>
+                            <th>Note Title</th>
+                            <th>Note Saved on</th>
+                            <th>Delete</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for note in notes %}
+                            <tr>
+                                <td>{{ loop.index }}</td>
+                                <td> <a href="/notes/{{ note[0] }}/">{{ note[3] }}</a></td>
+                                <td>{{ note[1] }}</td>
+                                <td> Delete </td>
+                            </tr>
+                        {%  endfor %}
+                    </tbody>
+                </table>
             {% endif %}
         </div>
     </div>
