--- a/templates/profile.html
+++ b/templates/profile.html
@@ -4,23 +4,31 @@
     <div class="container"  style="padding-top: 2%">
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
             {% if username %}
+                {% if delete %}
+                    <div class="alert alert-danger">
+                        <button type="button" class="close" data-dismiss="alert">&times;</button>
+                        Note deleted successfully
+                    </div>
+                {% endif %}
                 <!-- <h1>Welcome, {{ username }}</h1> -->
                 <table class="table table-hover table-striped table-bordered" style="background-color: white;">
                     <thead class="text-center">
                         <tr>
-                            <th>#</th>
+                            <th class="text-center">#</th>
                             <th>Note Title</th>
                             <th>Note Saved on</th>
-                            <th>Delete</th>
+                            <th class="text-center">Delete</th>
                         </tr>
                     </thead>
                     <tbody>
                         {% for note in notes %}
                             <tr>
-                                <td>{{ loop.index }}</td>
+                                <td class="text-center">{{ loop.index }}</td>
                                 <td> <a href="/notes/{{ note[0] }}/">{{ note[3] }}</a></td>
-                                <td>{{ note[1] }}</td>
-                                <td> Delete </td>
+                                <td>{{ note[1] | custom_date }}</td>
+                                <td class="text-center">
+                                    <a href="/notes/delete/{{ note[0] }}/"><span class="glyphicon glyphicon-trash"></span></a>
+                                </td>
                             </tr>
                         {%  endfor %}
                     </tbody>
