--- a/templates/login.html
+++ b/templates/login.html
@@ -30,6 +30,7 @@
                 <br>
                 {{ form.submit(class='form-control btn btn-primary') }}
             </form>
+            <h5>Don't have an account? <a href="/signup/">Sign Up</a></h5>
         </div>
     </div>
 {% endblock %}
