--- a/templates/signup.html
+++ b/templates/signup.html
@@ -11,6 +11,10 @@
                 <div class="alert alert-danger">{{ message }}</div>
             {% endfor %}
 
+            {% for message in form.email.errors %}
+                <div class="alert alert-danger">{{ message }}</div>
+            {% endfor %}
+
             {% for message in get_flashed_messages() %}
             <div class="alert alert-danger">
                 <button type="button" class="close" data-dismiss="alert">&times;</button>
@@ -38,6 +42,7 @@
                 <br>
                 {{ form.submit(class='form-control btn btn-primary') }}
             </form>
+            <h5>Already have an account? <a href="/login/">Log In</a></h5>
         </div>
     </div>
 {% endblock %}
