Modified templates views for search bar for notes

--- a/templates/index.html
+++ b/templates/index.html
@@ -81,6 +81,13 @@
 
         {% endblock %}
         <div class="add-margin-bottom"></div>
+        <div class="container inline-p navbar-fixed-bottom">
+            <legend></legend>
+            <h4>
+                <p>&copy; 2017 Omkar Pathak<p>
+                <p class="pull-right">Know more about me <a href="http://www.omkarpathak.in">here</a></p>
+            </h4>
+        </div>
     </body>
     <script src="{{ url_for('static', filename='js/jquery.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
