--- a/templates/signup.html
+++ b/templates/signup.html
@@ -26,21 +26,21 @@
                 {{ form.csrf_token }}
                 {{ form.username.label }}
                 <br>
-                {{ form.username(class='form-control') }}
+                {{ form.username(class='form-control no_borders') }}
                 <br>
                 {{ form.email.label }}
                 <br>
-                {{ form.email(class='form-control') }}
+                {{ form.email(class='form-control no_borders') }}
                 <br>
                 {{ form.password.label }}
                 <br>
-                {{ form.password(class='form-control') }}
+                {{ form.password(class='form-control no_borders') }}
                 <br>
                 {{ form.confirm_password.label }}
                 <br>
-                {{ form.confirm_password(class='form-control') }}
+                {{ form.confirm_password(class='form-control no_borders') }}
                 <br>
-                {{ form.submit(class='form-control btn btn-primary') }}
+                {{ form.submit(class='form-control btn btn-primary no_borders') }}
             </form>
             <h5>Already have an account? <a href="/login/">Log In</a></h5>
         </div>
