--- a/templates/login.html
+++ b/templates/login.html
@@ -22,13 +22,13 @@
                 {{ form.csrf_token }}
                 {{ form.username.label }}
                 <br>
-                {{ form.username(class='form-control') }}
+                {{ form.username(class='form-control no_borders') }}
                 <br>
                 {{ form.password.label }}
                 <br>
-                {{ form.password(class='form-control') }}
+                {{ form.password(class='form-control no_borders') }}
                 <br>
-                {{ form.submit(class='form-control btn btn-primary') }}
+                {{ form.submit(class='form-control btn btn-primary no_borders') }}
             </form>
             <h5>Don't have an account? <a href="/signup/">Sign Up</a></h5>
         </div>
