--- a/templates/index.html
+++ b/templates/index.html
@@ -81,7 +81,7 @@
 
         {% endblock %}
         <div class="add-margin-bottom"></div>
-        <div class="container inline-p navbar-fixed-bottom">
+        <div class="container inline-p">
             <legend></legend>
             <h4>
                 <p>&copy; 2017 Omkar Pathak<p>
