Added user count on homepage

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -4,6 +4,9 @@
     <div class="jumbotron text-center" style="padding-top: 5%">
         <h1><span class="element"></span></h1><span class="typed-cursor"></span>
         <i><h4>- Because you have the right to save all you need..</h4></i>
+        <br>
+        <br>
+        <h3>Currently, {{ session['user_count'] }} users registered</h3>
     </div>
 
     <div class="container" id="about">
