Added Contribution link

--- a/templates/index.html
+++ b/templates/index.html
@@ -85,7 +85,10 @@
             <legend></legend>
             <h4>
                 <p>&copy; 2017 Omkar Pathak<p>
-                <p class="pull-right">Know more about me <a href="http://www.omkarpathak.in">here</a></p>
+                <p class="pull-right">
+                    <a href="http://www.omkarpathak.in">About me</a>
+                    <a href="https://github.com/OmkarPathak/A-Simple-Note-Taking-Web-App">Contribute to this project</a>
+                </p>
             </h4>
         </div>
     </body>
