--- a/templates/login.html
+++ b/templates/login.html
@@ -31,6 +31,7 @@
                 {{ form.submit(class='form-control btn btn-primary no_borders') }}
             </form>
             <h5>Don't have an account? <a href="/signup/">Sign Up</a></h5>
+            <h5>Or you can use Username: <b>'test'</b> and Password: <b>123</b></h5>
         </div>
     </div>
 {% endblock %}
