Added search glyphicon

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -12,7 +12,7 @@
                 {% endif %}
                 <!-- <h1>Welcome, {{ username }}</h1> -->
                 {% if notes %}
-                    <input type="text" id="notes" class="form-control no_borders" autocomplete="off" name="notes" placeholder="Search Note">
+                    <input type="text" id="notes" class="form-control no_borders glyphicon" autocomplete="off" name="notes" placeholder="&#xe003 Search Note">
                     <div style="padding-top: 20px">
                         <div id="result"></div>
                     </div>
