--- a/templates/profile.html
+++ b/templates/profile.html
@@ -32,7 +32,7 @@
                                 <tr>
                                     <td class="text-center">{{ loop.index }}</td>
                                     <td> <a href="/notes/{{ note[0] }}/">{{ note[3] }}</a></td>
-                                    <td>{{ note[1] | custom_date }}</td>
+                                    <td>{{ note[1]  }}</td>
                                     <td>
                                             {{ tags[loop.index0] }}
                                     </td>
